can now load cart into chip8state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 find_package(Curses REQUIRED)
-include_directories("${CURSES_INCLUDE_DIR}/src")
+include_directories(${CURSES_INCLUDE_DIR}/src)
 
 add_executable (Chip8 src/main.c src/Chip8State.c)
 
