--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_C_STANDARD_REQUIRED 11)
-set(CMAKE_C_FLAGS "-std=c11 -Wall")
+set(CMAKE_C_FLAGS "-std=c11 -Wall -o2")
 
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIR}/src)
